<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="@color/ungu"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView3"
        android:src="@drawable/steak"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_baru"
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_gravity="center"
        android:background="@drawable/background_button"
        android:drawableLeft="@drawable/home"
        android:padding="10dp"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/btnBmi"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/persamaan"
        android:id="@+id/btnPersamaan"
        android:layout_above="@+id/btnInPutApp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputApp"
        android:id="@+id/btnInPutApp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bmi Ap"
        android:id="@+id/btnBmi"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/btnEksplisitIntent"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Eksplisit Intent"
        android:id="@+id/btnEksplisitIntent"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"/>

</RelativeLayout>
